--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 <div id="content">
     <h1>How secure is my password?</h1>
 
-    <form method="POST">
+    <form method="GET">
         <p>
-            <input id="password" autocomplete="off" autofocus="autofocus" name="password" placeholder="Enter your super secure password" type="text" />
+            <input id="p" autocomplete="off" autofocus="autofocus" name="p" placeholder="Enter your super secure password" type="text" />
             <input id="submit" type="submit" value="Check" />
         </p>
 
