Switched to mobile first design, score now located above nifty suggestions

--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 #content {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 input {
@@ -12,12 +12,20 @@ input {
     padding: 10px;
     font-size: 1em;
 
+    display: block;
+    width: 100%;
+
     /* disable iOS-specific style */
     -webkit-appearance: none;
+    box-sizing: border-box;
+}
+
+form p {
+    margin: 20px;
 }
 
 .suggestions {
-    width: 500px;
+    /*width: 500px;*/
     margin: 0 auto;
     margin-top: 50px;
 }
@@ -37,11 +45,8 @@ input {
 }
 
 input#submit {
-    padding-left: 25px;
-    padding-right: 25px;
+    margin-top: 10px;
 
-    margin-left: 10px;
-    display: inline-block;
     border: 1px solid #0055aa;
     background-color: #0066bb;
     color: white;
@@ -55,11 +60,31 @@ input#submit:hover {
 }
 
 input#p {
-    width: 300px;
+    /*width: 300px;*/
     outline: none;
     border: 1px solid #ccc;
 }
 
 .score {
-    padding-top: 50px;
+    margin-top: 50px;
+}
+
+@media only screen and (min-width: 768px) {
+    #content {
+        width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    input {
+        display: inline;
+    }
+
+    #p {
+        width: 350px;
+    }
+
+    #submit {
+        width: 150px;
+    }
 }
