--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,29 +6,28 @@
             <input id="p" autocomplete="off" autofocus="autofocus" name="p" placeholder="Enter a super secure password" value="{{password}}" type="text" />
             <input id="submit" type="submit" value="Check" />
         </p>
-
-        {{#if score}}
-        <div class="score"
-            <p><b>"{{password}}"</b> could be brute-forced in about</p>
-            <h2>{{prettyScore score}}</h2>
-            <p>{{scoreSeconds score}}</p>
-        </div>
-        {{/if}}
-
-        <div class="suggestions">
-            <p>
-                or try one of these nifty (and sadly <a href="http://wpengine.com/unmasked/" target="_blank">very common</a>) ones:
-                <ul>
-                    <li><a href="?p=password">password</a></li>
-                    <li><a href="?p=passw0rd">passw0rd</a></li>
-                    <li><a href="?p=abc123">abc123</a></li>
-                    <li><a href="?p=1234567890">1234567890</a></li>
-                    <li><a href="?p=querty">qwerty</a></li>
-                </ul>
-            </p>
-        </div>
     </form>
 
+    {{#if score}}
+    <div class="score">
+        <p><b>"{{password}}"</b> could be brute-forced in about</p>
+        <h2>{{prettyScore score}}</h2>
+        <p>{{scoreSeconds score}}</p>
+    </div>
+    {{/if}}
+
+    <div class="suggestions">
+        <p>
+            or try one of these nifty (and sadly <a href="http://wpengine.com/unmasked/" target="_blank">very common</a>) ones:
+        </p>
+        <ul>
+            <li><a href="?p=password">password</a></li>
+            <li><a href="?p=passw0rd">passw0rd</a></li>
+            <li><a href="?p=abc123">abc123</a></li>
+            <li><a href="?p=1234567890">1234567890</a></li>
+            <li><a href="?p=querty">qwerty</a></li>
+        </ul>
+    </div>
 </div>
 
 <script>
