--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 
     <form method="GET">
         <p>
-            <input id="p" autocomplete="off" autofocus="autofocus" name="p" placeholder="Enter a super secure password" value="{{password}}" type="text" />
+            <input id="p" autocomplete="off" autofocus="autofocus" name="p" placeholder="Enter a password" value="{{password}}" type="text" />
             <input id="submit" type="submit" value="Check" />
         </p>
     </form>
