--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 
     <div class="suggestions">
         <p>
-            or try one of these nifty (and sadly <a href="http://wpengine.com/unmasked/" target="_blank">very common</a>) ones:
+            or try one of these very creative (yet sadly <a href="http://wpengine.com/unmasked/" target="_blank">very common</a>) ones:
         </p>
         <ul>
             <li><a href="?p=password">password</a></li>
